--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -4,3 +4,7 @@ HTML,body,#app {
     margin: 0;
     padding: 0;
 }
+/* 卡片区域  !important 提高样式级别 */
+.el-card{
+    box-shadow: 0 1px 1px rgba(0, 8, 10, 0.15) !important;
+}
